# SQRS-Hackaton-Finder

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
backend/: locustfile.py  pyproject.toml
backend/docs/: backend-architecture.md  endpoints.md  testing-suite.md
backend/performance/: locust_stats.csv  locust_stats_history.csv
backend/scripts/: check_cc.py  check_locust_p95.py  check_mi.py
backend/src/: database.py  main.py
backend/src/models/: join_request.py  profile.py  team.py
backend/src/routers/: http_helpers.py  join_requests.py  profiles.py  response_docs.py  teams.py
backend/src/schemas/: join_request.py  profile.py  team.py
backend/src/services/: base_utils.py  common.py  db_utils.py  join_request_lookup_service.py  join_request_service.py  profile_dictionary_service.py  profile_mutation_service.py  profile_query_service.py  profile_service.py  seed_data.py  team_lookup_service.py  team_mutation_service.py  team_query_service.py  team_service.py
backend/tests/: conftest.py  test_join_requests.py  test_profiles.py  test_teams.py
backend/tests/docs/: test_openapi.py  test_readme.py
frontend/: README.md  pyproject.toml
frontend/src/: api_client.py  app.py
frontend/src/views/: auth.py  join_requests.py  my_profile.py  my_teams.py  profiles_page.py  teams_page.py
