[tool.poetry]
name = "hackathon-finder-backend"
version = "0.1.0"
description = "Hackathon Team Finder — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
flake8 = "^7.0.0"
bandit = "^1.7.0"
radon = "^6.0.1"
locust = "^2.28.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
